--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<div style="display: flex; justify-content: space-around; padding: 20px; background-color: darkblue; border-radius: 10px;">
-  <a href="tel:+1XXXXXXXXXX" style="display: block; width: 30%; padding: 15px; background-color: #4CAF50; color: white; text-align: center; border-radius: 5px; text-decoration: none; font-weight: bold; font-size: 16px;">
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; padding: 20px; background-color: darkblue;">
+  <a href="tel:+1XXXXXXXXXX" style="display: block; width: 80%; max-width: 300px; padding: 15px; margin-bottom: 10px; background-color: #4CAF50; color: white; text-align: center; border-radius: 5px; text-decoration: none; font-weight: bold; font-size: 16px;">
     Call Us
   </a>
-  <a href="https://bcrw.apple.com/urn:biz:YOUR_BUSINESS_ID" style="display: block; width: 30%; padding: 15px; background-color: #007AFF; color: white; text-align: center; border-radius: 5px; text-decoration: none; font-weight: bold; font-size: 16px;">
+  <a href="https://bcrw.apple.com/urn:biz:YOUR_BUSINESS_ID" style="display: block; width: 80%; max-width: 300px; padding: 15px; margin-bottom: 10px; background-color: #007AFF; color: white; text-align: center; border-radius: 5px; text-decoration: none; font-weight: bold; font-size: 16px;">
     Message Us
   </a>
-  <button onclick="sendWebhook()" style="width: 30%; padding: 15px; background-color: #008CBA; color: white; text-align: center; border-radius: 5px; border: none; font-weight: bold; font-size: 16px; cursor: pointer;">
+  <button onclick="sendWebhook()" style="width: 80%; max-width: 300px; padding: 15px; background-color: #008CBA; color: white; text-align: center; border-radius: 5px; border: none; font-weight: bold; font-size: 16px; cursor: pointer;">
     Send Data
   </button>
 </div>
