--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; padding: 20px; background-color: darkblue;">
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; width: 100vw; margin: 0; background-color: darkblue;">
   <a href="tel:+1XXXXXXXXXX" style="display: block; width: 80%; max-width: 300px; padding: 15px; margin-bottom: 10px; background-color: #4CAF50; color: white; text-align: center; border-radius: 5px; text-decoration: none; font-weight: bold; font-size: 16px;">
     Call Us
   </a>
