--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <a href="https://bcrw.apple.com/urn:biz:YOUR_BUSINESS_ID" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
     Message Us
   </a>
-  <button onclick="sendWebhook()" style="width: 98%; max-width: 600px; padding: 40px 30px; background-color: #008CBA; color: white; text-align: center; border-radius: 15px; border: none; font-weight: bold; font-size: 28px; cursor: pointer;">
+  <button onclick="sendWebhook()" style="width: 98%; max-width: 600px; padding: 40px 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; border: none; font-weight: bold; font-size: 28px; cursor: pointer;">
     Send Data
   </button>
 </div>
