--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
-<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; width: 100vw; margin: 0; background-color: darkblue;">
+<div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; width: 100vw; margin: 0; background-color: #11172b;">
   <a href="tel:+1XXXXXXXXXX" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
     Call Us
   </a>
   <a href="https://bcrw.apple.com/urn:biz:YOUR_BUSINESS_ID" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
     Message Us
   </a>
-  <button onclick="sendWebhook()" style="width: 98%; max-width: 600px; padding: 40px 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; border: none; font-weight: bold; font-size: 28px; cursor: pointer;">
+  <button onclick="sendWebhook()" style="width: 98%; max-width: 600px; padding: 40px 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; border: none; font-weight: bold; font-size: 32px; cursor: pointer;">
     Send Data
   </button>
 </div>
