--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines_Demo.png" alt="Your Logo" style="max-width: 200px; height: auto;">
   </div>
   <a href="tel:+1XXXXXXXXXX" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
-    Call Us
+    Tab to contact to Specialist
   </a>
   <a href="https://bcrw.apple.com/urn:biz:a1069ced-8b1b-48ba-ba07-3fa494e7ab9b" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
-    Message Us
+    Message Us with Apple Messages for Business
   </a>
   <button onclick="sendWebhook()" style="width: 98%; max-width: 600px; padding: 40px 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; border: none; font-weight: bold; font-size: 32px; cursor: pointer;">
-    Send Data
+    Start Meeting
   </button>
 </div>
 
