--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <div style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; width: 100vw; margin: 0; background-color: #11172b;">
   <div style="margin-bottom: 40px;">
-    <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines_Demo.png" alt="Your Logo" style="max-width: 400px; height: auto;">
+    <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines___Flights___Plane_Tickets___Hotels___Cars.jpg" alt="Your Logo" style="max-width: 400px; height: auto;">
   </div>
   <a href="tel:+1XXXXXXXXXX" style="display: block; width: 98%; max-width: 600px; padding: 40px 30px; margin-bottom: 30px; background-color: #e51937; color: white; text-align: center; border-radius: 15px; text-decoration: none; font-weight: bold; font-size: 28px;">
     Tab to contact to Specialist
