--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       Tab to contact to Specialist
     </a>
     <a href="https://bcrw.apple.com/urn:biz:a1069ced-8b1b-48ba-ba07-3fa494e7ab9b" style="display: block; width: 100%; padding: 30px 20px; margin-bottom: 20px; background-color: #e51937; color: white; text-align: center; border-radius: 12px; text-decoration: none; font-weight: bold; font-size: 24px;">
-      Message Us with Apple Messages for Business
+      Message Us with Apple Messages
     </a>
     <button onclick="sendWebhook()" style="width: 100%; padding: 30px 20px; background-color: #e51937; color: white; text-align: center; border-radius: 12px; border: none; font-weight: bold; font-size: 26px; cursor: pointer;">
       Start Meeting with Specialist 
