--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
         <p class="instruction-text">Please select your preference of communication channel</p>
         <a href="tel:+1XXXXXXXXXX" class="button">
-            Tab to contact to Specialist
+            Contact to Specialist
         </a>
         <a href="https://bcrw.apple.com/urn:biz:a1069ced-8b1b-48ba-ba07-3fa494e7ab9b" class="button">
-            Message Us with Apple Messages for Business
+            Message with Us 
         </a>
         <button onclick="sendWebhook()" class="button">
             Start Meeting
