--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         </div>
         <p class="instruction-text">Please select your preference of communication channel</p>
         <a href="tel:+14046784635" class="button">
-            Contact to Specialist
+            Talk to a Specialist
         </a>
         <a href="https://bcrw.apple.com/urn:biz:957ea80f-ecde-4cc6-9683-b5181318eb19" class="button">
-            Message with Us
+            Message with a Specialist
         </a>
         <button onclick="sendWebhook()" class="button">
-            Start Meeting
+            Video with a Specialist
         </button>
     </div>
 
