--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </button>
     </div>
     
-        function sendWebhook() {
+    <script>    function sendWebhook() {
             fetch('YOUR_WEBHOOK_URL', {
                 method: 'POST',
                 headers: {
