--- a/index.html
+++ b/index.html
@@ -1,125 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Communication Options</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: sans-serif;
-            background-color: #11172b;
-            color: white;
-            display: flex;
-            flex-direction: column; /* Align items in a column */
-            align-items: center;
-            min-height: 100vh;
-            width: 100vw;
-            box-sizing: border-box;
-            padding: 40px 20px; /* Add more top padding */
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            width: 95%; /* Make container responsive */
-            max-width: 500px; /* Limit maximum width */
-        }
-
-        .logo-container {
-            margin-bottom: 20px; /* Reduced margin */
-            width: 100%; /* Make logo container responsive */
-            max-width: 250px; /* Slightly reduced max width */
-        }
-
-        .logo {
-            display: block;
-            width: 100%;
-            height: auto;
-            margin: 0 auto;
-        }
-
-        .instruction-text {
-            text-align: center;
-            margin-bottom: 15px; /* Reduced margin */
-            font-size: 1em;
-            color: #ccc;
-        }
-
-        .button {
-            display: block;
-            width: 100%;
-            padding: 15px; /* Reduced padding */
-            margin-bottom: 10px; /* Reduced margin */
-            background-color: #e51937;
-            color: white;
-            text-align: center;
-            border-radius: 10px;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 16px; /* Reduced font size */
-            border: none;
-            cursor: pointer;
-            box-sizing: border-box; /* Ensure padding doesn't increase the overall width */
-        }
-
-        /* Adjust font size for smaller screens */
-        @media (max-width: 600px) {
-            .instruction-text {
-                font-size: 0.9em;
-            }
-            .button {
-                padding: 12px;
-                font-size: 14px;
-                margin-bottom: 8px;
-            }
-            .logo-container {
-                margin-bottom: 15px;
-                max-width: 200px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="logo-container">
-            <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines___Flights___Plane_Tickets___Hotels___Cars.jpg" alt="Your Logo" class="logo">
-        </div>
-        <p class="instruction-text">Please select your preference of communication channel</p>
-        <a href="tel:+14046784635" class="button">
-            Talk to a Specialist
-        </a>
-        <a href="https://bcrw.apple.com/urn:biz:957ea80f-ecde-4cc6-9683-b5181318eb19" class="button">
-            Message with a Specialist
-        </a>
-        <button onclick="sendWebhook()" class="button">
-            Video with a Specialist
-        </button>
-    </div>
-    
-    <script>    function sendWebhook() {
-            fetch('YOUR_WEBHOOK_URL', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({
-                    /* Add any data you want to send in the webhook */
-                    action: 'mobile_button_tap',
-                    timestamp: new Date().toISOString()
-                }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('Webhook response:', data);
-                alert('Data sent successfully!');
-            })
-            .catch((error) => {
-                console.error('Error sending webhook:', error);
-                alert('Failed to send data.');
-            });
-        }
-    </script>
-<div id="divicw" data-bind="BEC5B8D6-6350-4962-9B86-C088A89102E8" data-org="" data-guid="298d5c04-9eb8-44d0-8865-994fc689e198"></div><script>var i={t:function(t){var e="https://media.imi.chat/widget/js/imichatinit.js";try{var o=new XMLHttpRequest;o.onreadystatechange=function(){if(this.readyState==4){var t=document.getElementById("divicw");if(this.status==0){i.o(t);return}var e=document.createElement("script");e.innerHTML=this.responseText;t.parentNode.insertBefore(e,t.nextSibling)}};o.open("GET",e,true);o.send()}catch(s){console.error(s)}},o:function(t){t.insertAdjacentHTML("afterend",'<iframe id="tls_al_frm" frameborder="0" style="overflow: hidden;height: 208px;width: 394px;position: fixed;display: block;right: 48px;bottom: 12px;z-index: 99999; display:none;"></iframe>');var e=document.getElementById("tls_al_frm");var o=e.contentWindow||(e.contentDocument.document||e.contentDocument);o.document.open();o.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Untitled Document</title><style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;color: #99a0b0;font-size: 14px;}.popover__content{background-color: #fbfbfe; padding: 1.5rem; border-radius: 5px; width: 300px; box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);position: relative;}.popover__message{font-weight: 600;color:#56627c;font-size: 16px;}.pull-left{float:left;}.clearfix{clear: both;}.hdr-txt{width: 218px; margin-top: 3px;}.para-txt a{text-decoration: none;color: #005cde;}.close-btn{position: absolute;right:15px;top:15px;}.close-btn a{text-decoration: none;font-weight: 400; color: #56627c; font-size: 16px;}</style></head><body><div class="popover__content"><div class="close-btn"><a href="#" onclick="closeTLSAlert();">X</a></div><div class="popover__message"><div class="pull-left hdr-txt">This browser version is not supported on LiveChat.</div></div><div class="clearfix"></div><p class="para-txt">Please update your browser to the latest version and re-open the website to access the widget. </p></div><script>function closeTLSAlert(){window.parent.postMessage({key: "close_tls_alert",value: "close_tls_alert",action: "close_tls_alert"}, "*");}<\\/script></body></html>');o.document.close();e.style.display="block";window.addEventListener("message",function(t){if(t.data.action=="close_tls_alert"){i.s()}})},s:function(){var t=document.getElementById("tls_al_frm");t.remove()}};i.t(function(t){});</script></body>
-</html>
+ <html lang="en">
+ <head>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Communication Options</title>
+     <style>
+         body {
+             margin: 0;
+             font-family: sans-serif;
+             background-color: #11172b;
+             color: white;
+             display: flex;
+             flex-direction: column; /* Align items in a column */
+             align-items: center;
+             min-height: 100vh;
+             width: 100vw;
+             box-sizing: border-box;
+             padding: 40px 20px; /* Add more top padding */
+         }
+ 
+         .container {
+             display: flex;
+             flex-direction: column;
+             align-items: center;
+             width: 95%; /* Make container responsive */
+             max-width: 500px; /* Limit maximum width */
+         }
+ 
+         .logo-container {
+             margin-bottom: 20px; /* Reduced margin */
+             width: 100%; /* Make logo container responsive */
+             max-width: 250px; /* Slightly reduced max width */
+         }
+ 
+         .logo {
+             display: block;
+             width: 100%;
+             height: auto;
+             margin: 0 auto;
+         }
+ 
+         .instruction-text {
+             text-align: center;
+             margin-bottom: 15px; /* Reduced margin */
+             font-size: 1em;
+             color: #ccc;
+         }
+ 
+         .button {
+             display: block;
+             width: 100%;
+             padding: 15px; /* Reduced padding */
+             margin-bottom: 10px; /* Reduced margin */
+             background-color: #e51937;
+             color: white;
+             text-align: center;
+             border-radius: 10px;
+             text-decoration: none;
+             font-weight: bold;
+             font-size: 16px; /* Reduced font size */
+             border: none;
+             cursor: pointer;
+             box-sizing: border-box; /* Ensure padding doesn't increase the overall width */
+         }
+ 
+         /* Adjust font size for smaller screens */
+         @media (max-width: 600px) {
+             .instruction-text {
+                 font-size: 0.9em;
+             }
+             .button {
+                 padding: 12px;
+                 font-size: 14px;
+                 margin-bottom: 8px;
+             }
+             .logo-container {
+                 margin-bottom: 15px;
+                 max-width: 200px;
+             }
+         }
+     </style>
+ </head>
+ <body>
+     <div class="container">
+         <div class="logo-container">
+             <img src="https://raw.githubusercontent.com/meady35/AOD/refs/heads/main/Delta_Air_Lines___Flights___Plane_Tickets___Hotels___Cars.jpg" alt="Your Logo" class="logo">
+         </div>
+         <p class="instruction-text">Please select your preference of communication channel</p>
+         <a href="tel:+14046784635" class="button">
+             Talk to a Specialist
+         </a>
+         <a href="https://bcrw.apple.com/urn:biz:957ea80f-ecde-4cc6-9683-b5181318eb19" class="button">
+             Message with a Specialist
+         </a>
+         <button onclick="sendWebhook()" class="button">
+             Video with a Specialist
+         </button>
+     </div>
+ 
+     <script>
+         function sendWebhook() {
+             fetch('YOUR_WEBHOOK_URL', {
+                 method: 'POST',
+                 headers: {
+                     'Content-Type': 'application/json',
+                 },
+                 body: JSON.stringify({
+                     /* Add any data you want to send in the webhook */
+                     action: 'mobile_button_tap',
+                     timestamp: new Date().toISOString()
+                 }),
+             })
+             .then(response => response.json())
+             .then(data => {
+                 console.log('Webhook response:', data);
+                 alert('Data sent successfully!');
+             })
+             .catch((error) => {
+                 console.error('Error sending webhook:', error);
+                 alert('Failed to send data.');
+             });
+         }
+     </script>
+ </body>
+ <div id="divicw" data-bind="BEC5B8D6-6350-4962-9B86-C088A89102E8" data-org="" data-guid="298d5c04-9eb8-44d0-8865-994fc689e198"></div><script>var i={t:function(t){var e="https://media.imi.chat/widget/js/imichatinit.js";try{var o=new XMLHttpRequest;o.onreadystatechange=function(){if(this.readyState==4){var t=document.getElementById("divicw");if(this.status==0){i.o(t);return}var e=document.createElement("script");e.innerHTML=this.responseText;t.parentNode.insertBefore(e,t.nextSibling)}};o.open("GET",e,true);o.send()}catch(s){console.error(s)}},o:function(t){t.insertAdjacentHTML("afterend",'<iframe id="tls_al_frm" frameborder="0" style="overflow: hidden;height: 208px;width: 394px;position: fixed;display: block;right: 48px;bottom: 12px;z-index: 99999; display:none;"></iframe>');var e=document.getElementById("tls_al_frm");var o=e.contentWindow||(e.contentDocument.document||e.contentDocument);o.document.open();o.document.write('<!doctype html><html><head><meta charset="utf-8"><title>Untitled Document</title><style>body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;color: #99a0b0;font-size: 14px;}.popover__content{background-color: #fbfbfe; padding: 1.5rem; border-radius: 5px; width: 300px; box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);position: relative;}.popover__message{font-weight: 600;color:#56627c;font-size: 16px;}.pull-left{float:left;}.clearfix{clear: both;}.hdr-txt{width: 218px; margin-top: 3px;}.para-txt a{text-decoration: none;color: #005cde;}.close-btn{position: absolute;right:15px;top:15px;}.close-btn a{text-decoration: none;font-weight: 400; color: #56627c; font-size: 16px;}</style></head><body><div class="popover__content"><div class="close-btn"><a href="#" onclick="closeTLSAlert();">X</a></div><div class="popover__message"><div class="pull-left hdr-txt">This browser version is not supported on LiveChat.</div></div><div class="clearfix"></div><p class="para-txt">Please update your browser to the latest version and re-open the website to access the widget. </p></div><script>function closeTLSAlert(){window.parent.postMessage({key: "close_tls_alert",value: "close_tls_alert",action: "close_tls_alert"}, "*");}<\\/script></body></html>');o.document.close();e.style.display="block";window.addEventListener("message",function(t){if(t.data.action=="close_tls_alert"){i.s()}})},s:function(){var t=document.getElementById("tls_al_frm");t.remove()}};i.t(function(t){});</script></body>
+ </html>
